--- a/VoterInfo/templates/VotingStatistics.html
+++ b/VoterInfo/templates/VotingStatistics.html
@@ -2,5 +2,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Homepage</h1>
+<h1>Statistics on previous elections</h1>
+<h3>Voter turnout, demographics, etc. find api maybe?</h3>
 {% endblock content %}
