--- a/VoterInfo/templates/base.html
+++ b/VoterInfo/templates/base.html
@@ -1,9 +1,10 @@
 <!-- pages/templates/base.html -->
 <header>
 
-  <a href="{% url 'home' %}">Home</a> | <a href="{% url 'about' %}">About</a>
+  <a href="{% url 'MyInfo' %}">MyInfo</a> | <a href="{% url 'NextElection' %}">NextElection</a> | <a href="{% url 'CurrentSeats' %}">CurrentSeats</a> | <a href="{% url 'PolitionProfiles' %}">PolitionProfiles</a> | <a href="{% url 'VotingStatistics' %}">VotingStatistics</a> | <a href="{% url 'VotingQuestionsAndTips' %}">VotingQuestionsAndTips</a>
 
 </header>
 
 {% block content %}
 {% endblock content %}
+ 
