--- a/VoterInfo/templates/NextElection.html
+++ b/VoterInfo/templates/NextElection.html
@@ -4,5 +4,5 @@
 {% block content %}
 <h1>Next Election Information and Sample Ballot</h1>
 <h2>Info on Election date, polling open and close times, and Sample Ballot that can be filled out</h2>
-<h3>https://developers.google.com/civic-information/docs/v2 is an api i want to use</h3>
+<h3><a href="https://developers.google.com/civic-information/docs/v2">GoogleCivicInformationApi</a> is an api i want to use</h3>
 {% endblock content %}
