--- a/VoterInfo/templates/VotingStatistics.html
+++ b/VoterInfo/templates/VotingStatistics.html
@@ -3,5 +3,5 @@
 
 {% block content %}
 <h1>Statistics on previous elections</h1>
-<h3>Voter turnout, demographics, etc. find api maybe?</h3>
+<h3>Voter turnout, demographics, etc. find api maybe? Might be too dificult</h3>
 {% endblock content %}
