--- a/VoterInfo/templates/VotingQuestionsAndTips.html
+++ b/VoterInfo/templates/VotingQuestionsAndTips.html
@@ -2,6 +2,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Common questions about voting and tips on voting</h1>
-<h2> Simple list of Q&A with tips such as "Make sure to bring ID!" or "Fill out sample ballot and use it while voting to spend less time in the booth"</h2>
+<h1>Voting questions and answers</h1>
+<h2>Q: Can I look at my online ballot while in the voting booth?</h2>
+<h3>A: Some states do not allow pictures or video at the polling location, or even phones all together. Check if you are in one of those states and bring a paper with your choices instead.</h3>
+<h2>Q: Do I have to bring my ID?</h2>
+<h3>A: It depends which state you are in, but most states require a formal ID to vote.</h3>
+<h2>Q: What if I can't make it to the polls on election day?</h2>
+<h3>A: Mail-in ballots and early voting can be an option, check with your local government's guidelines to find out how.</h3>
+<h1>Voting Tips</h1>
+<h2>1) Remember to check our site to find your polling location and times before election day!</h2>
+<h2>2) Using our sample ballot in the polling booth can help you save time.</h2>
+<h2>3) 
+
+
+
+
+
+
+
 {% endblock content %}
