--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
       <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'PolitionProfiles' %}"><button type="button" class="btn btn-outline-dark">PolitionProfiles</button></a>
+        <a class="navbar-brand" href="{% url 'PoliticianProfiles' %}"><button type="button" class="btn btn-outline-dark">PoliticianProfiles</button></a>
       </div>
 
       <div>
